<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btFaTask"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="#d0d0d0"        
        android:text="@string/home_button_FA" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#313131" />

    <Button
        android:id="@+id/btSaTask"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="#d0d0d0"
        android:text="@string/home_button_SA" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#313131" />

    <Button
        android:id="@+id/btCsaTask"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="#d0d0d0"
        android:text="@string/home_button_CA" />

</LinearLayout>