<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/faCreateDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/spTaskName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spTaskTopic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <EditText
            android:id="@+id/etProcedure"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:hint="@string/enter_procedure" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cbObservations"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/observations_checkbox" />

            <CheckBox
                android:id="@+id/cbGroupTask"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/group_task_checkbox" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/suggestionAdd"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_drawer" />

            <TextView
                android:id="@+id/tvAddParameter"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical|left"
                android:text="@string/add_parameter_fa"
                android:textSize="17sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/lvParameters"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4" >
        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvTotalParamMarksText"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="6"
                android:gravity="right|center_vertical"
                android:text="@string/total_marks"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvTotalParamMarks"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:textSize="17sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btCreateTask"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:text="@string/button_save" />
    </LinearLayout>

    <include layout="@layout/settings" />

</android.support.v4.widget.DrawerLayout>